# owlzops-mapper

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  CONTRIBUTING.md   Cargo.toml  LICENSE  README.md  SECURITY.md  cliff.toml  deny.toml  gpg-public-key.asc  install.sh
.github/: deny.toml  dependabot.yml  labeler.yml
.github/scripts/: check-ioc.sh
.github/signatures/: cla.json
.github/workflows/: auto-approve.yml  auto-merge.yml  ci.yml  cla.yml  codeql.yml  e2e-test.yml  labeler.yml  release.yml  welcome.yml
docs/: FIELDS.md
src/: cli.rs  compare.rs  coverage.rs  known_hosts.rs  main.rs  models.rs  output.rs  runner.rs  safe_io.rs  scoring.rs  self_identity.rs  ssh_engine.rs  ui.rs  utils.rs  verdict_cache.rs
src/exporters/: mod.rs  xlsx.rs
src/scanners/: access.rs  capabilities.rs  deep.rs  dlp.rs  docker.rs  ebpf.rs  file_capabilities.rs  fs_inventory.rs  ghost_pid.rs  host.rs  library_injection.rs  mod.rs  mounts.rs  network.rs  packages.rs  proc_net.rs  provenance.rs  reverse_shell.rs  security.rs  self_integrity.rs  setuid.rs  storage.rs  sudoers.rs
