[package]
name = "owlzops-mapper"
version = "0.5.0"
edition = "2024"
license-file = "LICENSE"
description = "Owlzops Infrastructure Discovery Agent"

[dependencies]
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "process",
    "io-util",
    "signal",
] }
sysinfo = "0.30.13"
bollard = "0.16.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = "0.4.45"
uuid = { version = "1.23.3", features = ["v4"] }
comfy-table = "7.2.2"
clap = { version = "4.6.1", features = ["derive"] }
rust_xlsxwriter = "0.77.0"
shellexpand = "3"
libc = "0.2.186"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true