[package]
name = "owlzops-mapper"
version = "0.5.25"
edition = "2024"
license-file = "LICENSE"
description = "Owlzops Infrastructure Discovery Agent"

[dependencies]
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "process",
    "io-util",
    "signal",
    "fs",
] }
sysinfo = "0.30.13"
bollard = "0.16.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = "0.4.45"
uuid = { version = "1.23.3", features = ["v4"] }
comfy-table = "7.2.2"
clap = { version = "4.6.1", features = ["derive"] }
rust_xlsxwriter = "0.96.0"
shellexpand = "3"
libc = "0.2.186"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
russh = "0.62"
zeroize = { version = "1.6", features = ["derive"] }
dialoguer = "0.12"
thiserror = "2.0"
dirs-next = "2.0.0"
indicatif = "0.18"
sha1 = "0.11"
hmac = "0.13"
data-encoding = "2"
subtle = "2"

# io‑uring is Linux‑only
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.13"

[dev-dependencies]
tempfile = "3.27.0"
rand = "0.10.0"

[features]
default = ["local-scan"]
local-scan = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
# R19-16 — INVARIANT, DO NOT CHANGE TO "abort".
# Scanner isolation relies on panic interception at task boundaries:
# JoinError::is_panic() in main.rs (fleet loop, phase‑1 teardown, main).
# With abort the process dies immediately and reports from other hosts are lost.
# Introduced and reverted in v0.5.4.
panic = "unwind"

[profile.dev]
opt-level = 0
debug = true